k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-nodejs-service
  labels:
    app: test-nodejs
spec:
  #type: LoadBalancer
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: test-nodejs
