k8s/test-nodejs.yml
---
apiVersion: v1
kind: Namespace
metadata:
   name: test-nodejs-namespace

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-nodejs
  namespace: test-nodejs-namespace
  labels:
    app: test-nodejs
spec:
  rules:
  - host: test-nodejs-namespace.dev1.pcfgcp.pkhamdee.com
    http:
      paths:
      - backend:
          serviceName: test-nodejs-service
          servicePort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: test-nodejs-service
  namespace: test-nodejs-namespace
  labels:
    app: test-nodejs
spec:
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: test-nodejs

---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  labels:
    app: test-nodejs
  namespace: test-nodejs-namespace
  name: test-nodejs
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: test-nodejs
      annotations:
        kubernetes.io/change-cause: "FIXME"
    spec:
      containers:
      - name: test-nodejs
        image: harbor.pcfgcp.pkhamdee.com/library/test-nodejs:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
